# tt

./: .dockerignore  .envrc  .gitattributes  .gitignore  .pre-commit-config.yaml  .rumdl.toml  .sqlfluff  .trivyignore  .typos.toml  Cargo.toml  Dockerfile  Justfile  README.md  cliff.toml  cog.toml  compose.yaml  example.env  flake.nix  justfile  prek.toml
.github/: renovate.json
.github/workflows/: build.yml  checks.yml  cleanup-ghcr.yml  redoc.yml  release.yml
.husky/: pre-commit
openapi/: openapi.yaml
openapi/components/schemas/: user.yaml
openapi/paths/: echo.yaml
scripts/: build-docs.sh  check-typos.sh  cleanup-ghcr.sh  gen-rust-axum.sh  spin-up.sh
tt-http-app/: Cargo.toml
tt-http-app/src/: main.rs
tt-http-core/: Cargo.toml
tt-http-core/src/: config.rs  db.rs  error.rs  lib.rs  server.rs
tt-http-core/src/server/: echo.rs  user.rs
tt-openapi/: Cargo.toml  README.md
tt-openapi/.openapi-generator/: FILES
tt-openapi/src/: models.rs  types.rs
tt-openapi/src/apis/: echo.rs  mod.rs
tt-openapi/src/server/: mod.rs
